Affected Issue: GLN-1
What this commit has achieved:
1. Added profile picture column

--- a/src/main/webapp/i18n/en/user-management.json
+++ b/src/main/webapp/i18n/en/user-management.json
@@ -1,7 +1,7 @@
 {
   "userManagement": {
     "home": {
-      "title": "Users",
+      "title": "User Accounts",
       "createLabel": "Create a new user",
       "createOrEditLabel": "Create or edit a user"
     },
@@ -25,6 +25,7 @@
     "createdBy": "Created by",
     "createdDate": "Created date",
     "lastModifiedBy": "Modified by",
-    "lastModifiedDate": "Modified date"
+    "lastModifiedDate": "Modified date",
+    "imageUrl": "Profile Picture"
   }
 }
